<resources>
    <string name="app_name">My ApplicationTest</string>
    <string name="web_client_id">689303473399-tus45686f9pvtlhchupqog526568hue2.apps.googleusercontent.com</string>

    <string name="title_activity_first">FirstActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="sign">By Signing in with Google, you agree to share your basic account details such as your Google Email ID, Display Picture and Display Name. This data is stored securely on the Google Firebase servers and are not publicly available.</string>
    <string name="tandc">By downloading and using this app, these terms will automatically apply to you and you should make sure that you read them carefully before using this app. If you have any questions you can contact us using the Help Page.</string>
    <string name="tandc2">You’re not allowed to copy, or modify the app, any part of the app, or our trademarks in any way. You’re not allowed to attempt to extract the source code of the app, and you also shouldn’t try to translate the app into other languages, or make derivative versions. The app itself, and all the trade marks, copyright, database rights and other intellectual property rights related to it, still belong to K. J. Somaiya College of Engineering.</string>
    <string name="tandc3">The Jarvis app stores and processes personal data that you have provided to us, in order to provide our Service. It’s your responsibility to keep your phone and access to the app secure. Make sure your phone is not vulnerable to malware/viruses/malicious programs because it could mean that the Jarvis app won’t work properly or at all.</string>
    <string name="tandc4">Certain functions of the app will require the app to have an active internet connection. The connection can be Wi-Fi, or provided by your mobile network provider, but K. J. Somaiya College of Engineering cannot take responsibility for the app not working at full functionality if you don’t have access to Wi-Fi, and you don’t have any of your data allowance left.</string>
    <string name="tandc5">Any misuse of the app or reverse engineering the app for your own personal benefits will be deemed as violation of the Terms and Conditions and further action will be taken by the respective Head of Department. Misuse,includes but not limited to creating unnecessary permissions from within the app.</string>
    <string name="tandc51">By creating a permission you accept that you are responsible for the specified room\'s infrastructure and no damage shall be done. If any damage is done, the respective Head of that Department will take action.</string>
    <string name="tandc6">While you use our app, we may require you to provide us with certain personally identifiable information, including but not limited to your Somaiya Email ID, Display Picture and Display Name. The information that we request will be stored on the Google Firebase Servers and not shared publicly.</string>
    <string name="about">This application is used to grant permissions for different events going on in the Somaiya Campus. The application helps all the council to book any seminar hall prior to the event without any paperwork. All the procedure of booking till granting the seminar hall is done through the application. This is developed by the students of K. J.  Somaiya College of Engineering under the guidance of  Prof. Sunayana Jadhav (Faculty at K.J Somaiya College of Engineering, Mumbai).</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
